dify-internal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: trendgpt-dify
  name: dify-internal-ingress
  annotations:
    alb.ingress.kubernetes.io/group.name: 'rdsec.internal-services'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:us-west-2:123456789012:certificate/your-cert-arn'
spec:
  ingressClassName: alb
  rules:
   - host: "trendgptdify.runtime.trendmicro.com"
     http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: dify
              port:
                number: 80
